// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Avatar Basic 1`] = `
<div
  data-css-1a2nnhr=""
>
  <div
    aria-label="Jake Trent"
    data-css-1xbr5gr=""
    style={
      Object {
        "backgroundColor": "#7048C6",
      }
    }
  >
    J
  </div>
</div>
`;

exports[`Storyshots Components/Avatar Class Name Override 1`] = `
<div
  className="fakeClassName"
  data-css-1a2nnhr=""
>
  <div
    aria-label="Jake Trent"
    data-css-1xbr5gr=""
    style={
      Object {
        "backgroundColor": "#7048C6",
      }
    }
  >
    J
  </div>
</div>
`;

exports[`Storyshots Components/Avatar Gravatar Invalid 1`] = `
<div
  data-css-1a2nnhr=""
>
  <img
    alt="Jake Trent"
    data-css-d7y6x2=""
    onError={[Function]}
    onLoad={[Function]}
    src="https://secure.gravatar.com/avatar/invalidhash?d=tmp&d=https%3A%2F%2Fs3-us-west-2.amazonaws.com%2Fps-cdn%2Fdesign-system%2Fassets%2Ftransparent.gif"
  />
  <div
    aria-label="Jake Trent"
    data-css-1xbr5gr=""
    style={
      Object {
        "backgroundColor": "#7048C6",
      }
    }
  >
    J
  </div>
</div>
`;

exports[`Storyshots Components/Avatar Image Error 1`] = `
<div
  data-css-1a2nnhr=""
>
  <img
    alt="Jake Trent"
    data-css-d7y6x2=""
    onError={[Function]}
    onLoad={[Function]}
    src="https://jaketrent.com/fake.jpg"
  />
  <div
    aria-label="Bill Dill"
    data-css-1xbr5gr=""
    style={
      Object {
        "backgroundColor": "#0074AB",
      }
    }
  >
    B
  </div>
</div>
`;

exports[`Storyshots Components/Avatar Image Flat And Long 1`] = `
<div
  data-css-1a2nnhr=""
>
  <img
    alt="Jake Trent"
    data-css-d7y6x2=""
    onError={[Function]}
    onLoad={[Function]}
    src="https://cdn1.thr.com/sites/default/files/2019/03/chrisrocknaacp.jpg"
  />
  <div
    aria-label="Jake Trent"
    data-css-1xbr5gr=""
    style={
      Object {
        "backgroundColor": "#7048C6",
      }
    }
  >
    J
  </div>
</div>
`;

exports[`Storyshots Components/Avatar Image Square 1`] = `
<div
  data-css-1a2nnhr=""
>
  <img
    alt="Jake Trent"
    data-css-d7y6x2=""
    onError={[Function]}
    onLoad={[Function]}
    src="https://gravatar.com/avatar/63a1fa126f541c0f0ecf1d74f7a40640?s=320&r=g&d=https%3A%2F%2Fs3-us-west-2.amazonaws.com%2Fps-cdn%2Fdesign-system%2Fassets%2Ftransparent.gif"
  />
  <div
    aria-label="Jake Trent"
    data-css-1xbr5gr=""
    style={
      Object {
        "backgroundColor": "#7048C6",
      }
    }
  >
    J
  </div>
</div>
`;

exports[`Storyshots Components/Avatar Image Tall And Thin 1`] = `
<div
  data-css-1a2nnhr=""
>
  <img
    alt="Jake Trent"
    data-css-d7y6x2=""
    onError={[Function]}
    onLoad={[Function]}
    src="https://akns-images.eonline.com/eol_images/Entire_Site/2010330/293.WillFerrell.tg.043010.jpg"
  />
  <div
    aria-label="Jake Trent"
    data-css-1xbr5gr=""
    style={
      Object {
        "backgroundColor": "#7048C6",
      }
    }
  >
    J
  </div>
</div>
`;

exports[`Storyshots Components/Avatar Image Valid 1`] = `
<div
  data-css-1a2nnhr=""
>
  <img
    alt="Jake Trent"
    data-css-d7y6x2=""
    onError={[Function]}
    onLoad={[Function]}
    src="https://en.gravatar.com/userimage/8399312/b15448d840afacd0eb18102baf788255.jpeg?d=https%3A%2F%2Fs3-us-west-2.amazonaws.com%2Fps-cdn%2Fdesign-system%2Fassets%2Ftransparent.gif"
  />
  <div
    aria-label="Jake Trent"
    data-css-1xbr5gr=""
    style={
      Object {
        "backgroundColor": "#7048C6",
      }
    }
  >
    J
  </div>
</div>
`;

exports[`Storyshots Components/Avatar Name Empty 1`] = `
<div
  data-css-1a2nnhr=""
>
  <div
    aria-label=""
    data-css-1xbr5gr=""
    style={
      Object {
        "backgroundColor": "#C00F00",
      }
    }
  >
    :)
  </div>
</div>
`;

exports[`Storyshots Components/Avatar Name Single Char 1`] = `
<div
  data-css-1a2nnhr=""
>
  <div
    aria-label="x"
    data-css-1xbr5gr=""
    style={
      Object {
        "backgroundColor": "#7048C6",
      }
    }
  >
    X
  </div>
</div>
`;

exports[`Storyshots Components/Avatar Name Special Char 1`] = `
<div
  data-css-1a2nnhr=""
>
  <div
    aria-label="% Special Char"
    data-css-1xbr5gr=""
    style={
      Object {
        "backgroundColor": "#7048C6",
      }
    }
  >
    %
  </div>
</div>
`;

exports[`Storyshots Components/Avatar Name Undefined 1`] = `
<div
  data-css-1a2nnhr=""
>
  <div
    data-css-1xbr5gr=""
    style={
      Object {
        "backgroundColor": "#D1487B",
      }
    }
  >
    :)
  </div>
</div>
`;

exports[`Storyshots Components/Avatar Sizes 1`] = `
Array [
  <div
    data-css-79vgce=""
  >
    <div
      data-css-1xbr5gr=""
      style={
        Object {
          "backgroundColor": "#D1487B",
        }
      }
    >
      :)
    </div>
  </div>,
  <div
    data-css-xthig=""
  >
    <div
      data-css-1xbr5gr=""
      style={
        Object {
          "backgroundColor": "#D1487B",
        }
      }
    >
      :)
    </div>
  </div>,
  <div
    data-css-1a2nnhr=""
  >
    <div
      data-css-1xbr5gr=""
      style={
        Object {
          "backgroundColor": "#D1487B",
        }
      }
    >
      :)
    </div>
  </div>,
  <div
    data-css-1bcvkli=""
  >
    <div
      data-css-1xbr5gr=""
      style={
        Object {
          "backgroundColor": "#D1487B",
        }
      }
    >
      :)
    </div>
  </div>,
  <div
    data-css-1vdca9w=""
  >
    <div
      data-css-1xbr5gr=""
      style={
        Object {
          "backgroundColor": "#D1487B",
        }
      }
    >
      :)
    </div>
  </div>,
]
`;

exports[`Storyshots Components/Avatar Style Override 1`] = `
<div
  data-css-1a2nnhr=""
  style={
    Object {
      "border": "3px solid red",
    }
  }
>
  <div
    aria-label="Jake Trent"
    data-css-1xbr5gr=""
    style={
      Object {
        "backgroundColor": "#7048C6",
      }
    }
  >
    J
  </div>
</div>
`;

exports[`Storyshots Components/Avatar Various Names 1`] = `
<div>
  <div
    data-css-1a2nnhr=""
  >
    <div
      aria-label="Anakin Skywalker"
      data-css-1xbr5gr=""
      style={
        Object {
          "backgroundColor": "#C00F00",
        }
      }
    >
      A
    </div>
  </div>
  <div
    data-css-1a2nnhr=""
  >
    <div
      aria-label="Budapest Skywalker"
      data-css-1xbr5gr=""
      style={
        Object {
          "backgroundColor": "#D1487B",
        }
      }
    >
      B
    </div>
  </div>
  <div
    data-css-1a2nnhr=""
  >
    <div
      aria-label="Carlos Organa"
      data-css-1xbr5gr=""
      style={
        Object {
          "backgroundColor": "#009380",
        }
      }
    >
      C
    </div>
  </div>
  <div
    data-css-1a2nnhr=""
  >
    <div
      aria-label="Dennis Pimenta"
      data-css-1xbr5gr=""
      style={
        Object {
          "backgroundColor": "#7048C6",
        }
      }
    >
      D
    </div>
  </div>
  <div
    data-css-1a2nnhr=""
  >
    <div
      aria-label="Peia Organa"
      data-css-1xbr5gr=""
      style={
        Object {
          "backgroundColor": "#0074AB",
        }
      }
    >
      P
    </div>
  </div>
  <div
    data-css-1a2nnhr=""
  >
    <div
      aria-label="Obi-Wan Kenobi"
      data-css-1xbr5gr=""
      style={
        Object {
          "backgroundColor": "#D1487B",
        }
      }
    >
      O
    </div>
  </div>
  <div
    data-css-1a2nnhr=""
  >
    <div
      aria-label="Uy Marley"
      data-css-1xbr5gr=""
      style={
        Object {
          "backgroundColor": "#D1487B",
        }
      }
    >
      U
    </div>
  </div>
  <div
    data-css-1a2nnhr=""
  >
    <div
      aria-label="Harry Potter"
      data-css-1xbr5gr=""
      style={
        Object {
          "backgroundColor": "#0074AB",
        }
      }
    >
      H
    </div>
  </div>
  <div
    data-css-1a2nnhr=""
  >
    <div
      aria-label="Diz Blau"
      data-css-1xbr5gr=""
      style={
        Object {
          "backgroundColor": "#6BA300",
        }
      }
    >
      D
    </div>
  </div>
  <div
    data-css-1a2nnhr=""
  >
    <div
      aria-label="Single"
      data-css-1xbr5gr=""
      style={
        Object {
          "backgroundColor": "#7048C6",
        }
      }
    >
      S
    </div>
  </div>
</div>
`;
